fixed new project alignment

--- a/frontend/pixel-vision/src/app/new-project/new-project-form/new-project-form.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project-form/new-project-form.component.css
@@ -22,11 +22,28 @@ html, body {
   .project-form {
     display: flex;
     flex-direction: column;
+    justify-content: center; /* Add this line */
     align-items: flex-start;
     width: 100%;
     max-width: 500px;
     margin-bottom: 1rem;
   }
+  
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; /* Add this line */
+  }
+
+  .form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  
   
   .form-label {
     margin-bottom: 0.5rem;
